src/routes/examples/themes/jse-theme-big.css
.jse-theme-big {
  --jse-menu-background: #ff3e00;
  --jse-menu-background-highlight: #fd5e2d;
  --jse-menu-button-size: 48px;

  --jse-font-family: courier New;
  --jse-font-family-mono: courier New;
  --jse-font-size: 28px;
  --jse-font-size-small: 24px;
  --jse-font-size-mono: 28px;

  --jse-button-primary-background: #ff3e00;
  --jse-button-primary-background-highlight: #e74c1c;
  --itemIsActiveBG: #fd5e2d;

  /* messages */
  --jse-message-error-background: #f6c5c0;
  --jse-message-error-color: #ee5341;
  --jse-message-warning-background: #ffe198;
  --jse-message-warning-color: #fdc539;
  --jse-message-success-background: #cde3ac;
  --jse-message-success-color: #9ac45d;
  --jse-message-action-background: rgba(255, 255, 255, 0.2);
  --jse-message-action-background-highlight: rgba(255, 255, 255, 0.3);

  --jse-context-menu-button-size: 32px;
  --jse-context-menu-background: #ff3e00;
  --jse-context-menu-background-highlight: #ea3600;
  --jse-context-menu-color: #fff;
  --jse-context-menu-color-disabled: rgba(255, 255, 255, 0.4);
  --jse-context-menu-separator-color: rgba(255, 255, 255, 0.2);
}

